--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <input type="submit" value="save word" onclick="saveWords()" />
       </div>
     </div>
+    <p>ShareEverythings.com :) </p>
   </div>
 </body>
 <script src="./index.js"></script>
