--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <input type="submit" value="save word" onclick="saveWords()" />
       </div>
     </div>
-    <p>ShareEverythings.com :) </p>
+    <a href="https://shareeverythings.com/">ShareEverythings.com :) </a>
   </div>
 </body>
 <script src="./index.js"></script>
